<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="1"
        android:textColor="@color/white"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_evnts"
        android:orderInCategory="2"
        android:textColor="@color/white"
        android:title="@string/events"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_holidays"
        android:icon="@drawable/holidays"
        android:orderInCategory="2"
        android:textColor="@color/white"
        android:title="@string/holidays"
        app:showAsAction="always" />
</menu>